<resources>
    <string name="app_name">AndroidBottomNavigation</string>
    <string name="nav_home">Home</string>
    <string name="nav_notification">Notification</string>
    <string name="nav_account">Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to">Welcome to</string>
    <string name="tnq_guru">Tnq Guru</string>
    <string name="sign_in_your_account">Sign in your account</string>
    <string name="email">Email</string>
    <string name="you_example_com">you@example.com</string>
    <string name="password">Password</string>
    <string name="password_hint">• • • • • • •</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="name">Name</string>
    <string name="user_profile">User Profile</string>
    <string name="phone">Phone</string>
    <string name="phone_num">+91 99999 00000</string>
    <string name="from">from</string>
    <string name="TNQ_GURU">TNQ GURU</string>
    <string name="mobile">Mobile</string>
    <string name="user_image">Upload Photo</string>
    <string name="user_name_edit">Edit User Name</string>
    <string name="enter_your_mail">Your Email</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="forgot_password_sent">Forgot Password</string>
    <string name="create_an_account">Create An Account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="sample123">sample123</string>
    <string name="course">Course</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="select_one">Select</string>

    <string-array name="selectList">
        <item>Select</item>
        <item>Java</item>
        <item>PHP</item>
        <item>ASP</item>
        <item>Python</item>
        <item>Android</item>
        <item>Dot Net</item>
        <item>Networking</item>
    </string-array>
</resources>