<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:background="@color/colorBackground">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/layoutHeader"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/background"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/profileImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_profile"
                android:layout_marginStart="20dp"
                android:contentDescription="@string/user_image"/>

            <TextView
                android:id="@+id/profileName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_medium"
                android:includeFontPadding="false"
                android:text="@string/name"
                android:textColor="@color/colorWhite"
                android:textSize="22sp"
                android:layout_marginStart="15dp"/>

            <LinearLayout
                android:id="@+id/progileEditLable"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="horizontal"
                android:gravity="end|center"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/profileEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_edit"
                    android:paddingEnd="25dp"
                    android:contentDescription="@string/user_name_edit"/>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/profileLable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:fontFamily="@font/ubuntu_medium"
            android:includeFontPadding="false"
            android:text="@string/user_profile"
            android:textColor="@color/colorPrimaryText"
            android:textSize="19sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutHeader"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/profileCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            app:cardCornerRadius="4dp"
            app:layout_constraintTop_toBottomOf="@id/profileLable">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/ubuntu_regular"
                    android:includeFontPadding="false"
                    android:text="@string/email"
                    android:textColor="@color/colorMintText"
                    android:textSize="14sp"
                    app:drawableEndCompat="@drawable/ic_edit_arrow"/>

                <TextView
                    android:id="@+id/profileEmail"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@null"
                    android:fontFamily="@font/ubuntu_regular"
                    android:text="@string/you_example_com"
                    android:includeFontPadding="false"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="17sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="17dp"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/ubuntu_regular"
                    android:includeFontPadding="false"
                    android:text="@string/mobile"
                    android:textColor="@color/colorMintText"
                    android:textSize="14sp"
                    app:drawableEndCompat="@drawable/ic_edit_arrow"/>

                <TextView
                    android:id="@+id/profilePhone"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@null"
                    android:fontFamily="@font/ubuntu_regular"
                    android:text="@string/phone_num"
                    android:includeFontPadding="false"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="17sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="17dp"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/ubuntu_regular"
                    android:includeFontPadding="true"
                    android:text="@string/password"
                    android:textColor="@color/colorMintText"
                    android:textSize="14sp"
                    android:drawablePadding="10dp"
                    app:drawableEndCompat="@drawable/ic_edit_arrow"/>

                <TextView
                    android:id="@+id/profilePassword"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@null"
                    android:fontFamily="@font/ubuntu_regular"
                    android:text="@string/password_hint"
                    android:includeFontPadding="false"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="17sp"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/profileFrom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40sp"
            android:fontFamily="@font/ubuntu_regular"
            android:includeFontPadding="false"
            android:text="@string/from"
            android:textColor="@color/colorPrimaryText"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profileCard"/>

        <TextView
            android:id="@+id/profileTNQGURU"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:fontFamily="@font/ubuntu_medium"
            android:includeFontPadding="false"
            android:text="@string/TNQ_GURU"
            android:textColor="@color/colorPrimaryText"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profileFrom"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>