<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="4dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:fontFamily="@font/ubuntu_medium"
                android:includeFontPadding="false"
                android:text="@string/forgot_password_sent"
                android:textColor="@color/colorPrimaryText"
                android:textSize="22sp"/>

            <EditText
                android:id="@+id/inputForgotMail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15sp"
                android:layout_marginEnd="15dp"
                android:backgroundTint="@color/colorBlue"
                android:fontFamily="@font/ubuntu_regular"
                android:hint="@string/you_example_com"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorPrimaryText"
                android:textSize="15sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="end"
                android:padding="4dp">

                <Button
                    android:id="@+id/cancel_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginBottom="15dp"
                    android:fontFamily="@font/ubuntu_medium"
                    android:includeFontPadding="false"
                    android:text="@string/cancel"
                    style="?android:attr/buttonBarStyle"
                    android:background="@drawable/login_btn"
                    android:textColor="@color/colorWhite"
                    android:textSize="15sp"/>

                <Button
                    android:id="@+id/send_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="15dp"
                    android:fontFamily="@font/ubuntu_medium"
                    android:includeFontPadding="false"
                    android:text="@string/send"
                    style="?android:attr/buttonBarStyle"
                    android:background="@drawable/login_btn"
                    android:textColor="@color/colorWhite"
                    android:textSize="14sp"/>

            </LinearLayout>

        </LinearLayout>


</RelativeLayout>